--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CezaAvukatim</title>
+  <title>Ceza Avukatım</title>
+  <meta name="description" content="Ceza Avukatım, Ceza Hukukunda Hukuki Danışmanlık İçin Kurulmuş Bir Web Sitesidir.">
   <base href="/">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Poppins:300,400,500,600,700,800">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/cezaavukatim-favicon.png">
 </head>
 <body>
   <app-root></app-root>
